# pet-tracker

./: .gitignore  manage.py  pyproject.toml
apps/pets/: admin.py  config.py  forms.py  models.py  urls.py  views.py
apps/pets/migrations/: 0001_initial.py  0002_alter_pet_medical_event_alter_pet_vet_visits.py  0002_alter_pet_picture.py  0003_alter_pet_medical_event_alter_pet_vet_visits.py  0003_petevent_remove_pet_medical_event_and_more.py  0004_remove_petevent_title.py
apps/pets/templatetags/: pets_extras.py
apps/pets/tools/: image.py
apps/templates/includes/: navigation.html  sidebar.html
apps/templates/layouts/: base.html  modal-base.html
apps/templates/pets/: index.html  modal-form.html  pet_overview.html
core/: .gitignore  asgi.py  settings.py  urls.py  wsgi.py
health_app/: admin.py  models.py  urls.py  views.py
health_app/migrations/: 0001_initial.py  0002_pet_picture.py  0003_alter_animal_breed_alter_animal_date_of_birth_and_more.py  0004_alter_animal_date_of_birth.py  0005_alter_animal_date_of_birth.py  0006_medicalevent_vetvisit_alter_pet_animal_and_more.py
media/default_pet_photos/: attribution.txt
pet_health/: asgi.py  settings.py  urls.py  wsgi.py
